<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaperprincipal"
    tools:context=".Main2Activity_level1">

    <TextView
        android:id="@+id/txt_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="53dp"
        android:layout_marginTop="13dp"
        android:contentDescription="@string/app_name"
        android:text="@string/player_name"
        android:textColor="@color/primary_text"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txt_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/txt_name"
        android:layout_alignParentTop="true"
        android:layout_marginTop="49dp"
        android:layout_marginEnd="3dp"
        android:text="@string/total_score"
        android:textColor="@color/primary_text"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txt_life"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/txt_name"
        android:layout_alignParentTop="true"
        android:layout_marginTop="81dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/app_name"
        android:text="@string/et_life"
        android:textColor="@color/primary_text"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/imv_life"
        android:layout_width="80dp"
        android:layout_height="25dp"
        android:layout_alignBottom="@+id/txt_life"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="200dp"
        android:layout_marginBottom="0dp"
        android:contentDescription="@string/app_name"
        app:srcCompat="@drawable/tresvidas" />

    <ImageView
        android:id="@+id/imv_num1"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="171dp"
        android:contentDescription="@string/app_name"
        app:srcCompat="@drawable/cero" />

    <ImageView
        android:id="@+id/imv_plus"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="174dp"
        android:layout_marginEnd="2dp"
        android:layout_toStartOf="@+id/imv_num2"
        android:contentDescription="@string/app_name"
        app:srcCompat="@drawable/adicion" />

    <ImageView
        android:id="@+id/imv_num2"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="174dp"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/app_name"
        app:srcCompat="@drawable/cero" />

    <EditText
        android:id="@+id/edt_answer"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_alignStart="@+id/txt_name"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="86dp"
        android:layout_marginBottom="161dp"
        android:ems="10"
        android:hint="@string/et_answer"
        android:inputType="number"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark" />

    <Button
        android:id="@+id/button2"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_alignTop="@+id/edt_answer"
        android:layout_marginStart="-8dp"
        android:layout_marginTop="-3dp"
        android:layout_toEndOf="@+id/imv_plus"
        android:background="@drawable/fondoboton"
        android:onClick="compare"
        android:text="@string/but_sum" />


</RelativeLayout>