<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/globos"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imview_personaje"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="1dp"
        app:srcCompat="@drawable/manzana" />

    <EditText
        android:id="@+id/text_nombre"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_alignStart="@+id/imview_personaje"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-28dp"
        android:layout_marginBottom="186dp"
        android:background="@drawable/fondoet"
        android:ems="10"
        android:hint="@string/et_nombre"
        android:inputType="textPersonName"
        android:maxLength="15"
        android:paddingLeft="75dp"
        android:paddingRight="75dp"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark" />

    <Button
        android:id="@+id/button"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="90dp"
        android:background="@drawable/fondoboton"
        android:onClick="Play"
        android:text="@string/boton"
        android:textColor="@color/icons"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textview_bestscore"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="13dp"
        android:background="@drawable/fondoet"
        android:contentDescription="@string/app_name"
        android:gravity="center"
        android:text="your score here"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp" />
</RelativeLayout>